--- a/tables/ps_optics.tex
+++ b/tables/ps_optics.tex
@@ -6,6 +6,6 @@
         $D_x(\theta)$     & $D_{0,x}$     & 2.66  & $D_{50,x}$     & +0.34-0.22i \\
         $D_y(\theta)$     & $D_{0,y}$     & 0     & $D_{50,y}$     & 0           \\
     \end{tabular}
-    \caption{Primary Fourier coefficients describing periodic nature of PS optics}
+    \caption{Primary Fourier coefficients describing periodic nature of PS optics.}
     \label{tab:ps_optics_fourier}
 \end{table}
