--- a/tables/ps_params.tex
+++ b/tables/ps_params.tex
@@ -4,17 +4,15 @@
         Parameter                  & Symbol        & Injection                      & Extraction \\
         \hline
         Circumference (m)          & C             & \multicolumn{2}{c}{628}                     \\
-        Kinetic Energy (GeV)       & W             & 1.4                            & 25         \\
-        Lorentz Factor             & $\gamma$      & 2.5                            & 27.7       \\
-        Revolution Frequency (kHz) & $f_s$         & 436                            & 476        \\
-        RF Harmonic                & $h$           & 7                              & 21         \\
-        RF Frequency (MHz)         & $f_{RF}$      & 3                              & 10         \\
-        Synchrotron Frequency (Hz) & $\Omega_s$    & 600                            & 230        \\
-        Synchrotron Tune           & $Q_s$         & 0.00137                        & 0.00048    \\
+        Kinetic Energy (GeV)       & W             & 2.0                            & 25.0        \\
+        Lorentz Factor             & $\gamma_s$      & 3.1                            & 28.7       \\
+        Revolution Frequency (kHz) & $f_s$         & 452                            & 476        \\
+        RF Harmonic                & $h$           & 9                              & 21         \\
+        RF Frequency (MHz)         & $f_{RF}$      & 4                              & 10         \\
         Transverse Tune            & $Q_x, Q_y$    & \multicolumn{2}{c}{6.21, 6.24}              \\
-        Transition Factor          & $\gamma_t$    & 6.1                            & 6.1        \\
+        Transition Factor          & $\gamma_t$    & \multicolumn{2}{c}{6.1}          \\
         Bunch Width (ns)           & $\sigma_\tau$ & 26                             & 1
     \end{tabular}
-    \caption{Injection/Extraction parameters for PS at flat-top"' and 'flat-bottom' respectively.}
+    \caption{Updated Injection/Extraction parameters for PS at ``flat-top" and ``flat-bottom" respectively after the injection energy was upgraded from 1.4 to 2 GeV}
     \label{tab:ps_parameters}
 \end{table}
