--- a/tables/tune_distribution.tex
+++ b/tables/tune_distribution.tex
@@ -6,6 +6,6 @@
         Gaussian  & $\frac{1}{\sigma_{\hat{\phi}}\sqrt{2\pi}}\exp\left(-\frac{1}{2}\frac{\hat{\phi}^2}{\sigma_{\hat{\phi}}^2}\right)$ & $\frac{1}{\sigma_{\hat{\phi}}\sqrt{2\pi}}\exp(-\frac{1}{2}\frac{16(1-\mu)}{\sigma_\phi^2})$ & $-\frac{\phi}{\sigma^2}\lambda(\phi)$ \\
         Parabolic & $\frac{3}{2L_{\hat{\phi}}}(1-4\frac{\hat{\phi}^2}{L_{\hat{\phi^2}}})$                                             & $\frac{3}{2L^3}(L^2-64+64\mu)$                                                              & $-\frac{12\phi}{L^3}$                 \\
     \end{tabular}
-    \caption{Impact of longitudinal distribution on synchrotron frequency spread}
+    \caption{Impact of longitudinal distribution on synchrotron frequency spread.}
     \label{tab:freq_spread}
 \end{table}
