--- a/main.tex
+++ b/main.tex
@@ -3,27 +3,20 @@
 \usepackage{amsmath}
 \usepackage[margin=3cm]{geometry}
 
-\usepackage{csquotes}
-
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 
 \usepackage{graphicx}
-\setkeys{Gin}{width=0.8\linewidth}
+\setkeys{Gin}{width=0.75\linewidth}
 
 \usepackage{float}
 \floatplacement{figure}{H}
 \floatplacement{table}{H}
 
-\usepackage[style=phys]{biblatex} % https://www.overleaf.com/learn/latex/Biblatex_citation_styles
+\usepackage{biblatex}
 \addbibresource{library.bib}
 
-\usepackage[colorlinks]{hyperref}
-
-\setlength\parindent{0pt}
-\setlength{\parskip}{10pt}
-
-\usepackage{xcolor}
+\usepackage[hidelinks]{hyperref}
 
 % ----- CONTENT ----- %
 
@@ -38,6 +31,7 @@
 \include{body}
 \include{appendix}
 
+\nocite{migliorati_instability_2018}
 \printbibliography
 
 \end{document}
