--- a/title.tex
+++ b/title.tex
@@ -1,50 +1,49 @@
 \begin{titlepage}
     \centering
-    \vspace*{1cm}
+  
+    \includegraphics[height=3cm, width=3cm]{logos/LogoOutline-Bleu.pdf} 
+    \hfill
+    \includegraphics[height=3cm, width=9cm]{logos/logo.png}
+
+    \vfill
         
     \Huge
-    \textbf{Effects of Betatron Motion on Longitudinal Space-Charge Impedancee}
+    \textbf{Longitudinal Space Charge Modeling in the CERN PS}
+    % \textbf{Effects of Betatron Motion on Longitudinal Space-Charge}
         
-    \vspace{0.5cm}
+    \vspace{1cm}
+    
+    \Huge
+    Alexander J. Laut
+
+    \vfill
+
     \LARGE
-    % subtitle
-        
-    \vspace{1.5cm}
-        
-    \textbf{Alexander J. Laut}
-        
+    A thesis presented for the degree\\
+    \textit{Master of Physics}
+
     \vfill
-        
-    \includegraphics[width=0.4\textwidth]{logos/LogoOutline-Bleu.pdf}
-    \vfill
-    
-    A thesis presented for the degree of\\
-    Masters of Physics
-    
-    \vspace{0.8cm}
-        
-    \includegraphics[width=0.4\textwidth]{logos/logo.png}
-    
-    \Large
+
     Department of Physics\\
-    % University Paris-Saclay\\
-    France\\
-    September 2021
-    
-    % Composition of the jury:
-    % \begin{itemize}
-    %     \item Nicolas Chauvin
-    %     \item Nicolas Delerue,
-    %     \item Sophi Kazamias IJC Lab
-    % \end{itemize}
+    Plasmas, Lasers, Accelerators and Tokamaks\\
+    Paris-Saclay University\\
+    \vfill
+
+    \Large
+    Orsay, France \hfill September 2021
 \end{titlepage}
 
 \begin{abstract}
-Particles in an intense bunch will experience longitudinal self-fields due to space-charge. This space charge effect, described by geometric factors dependent on a particle’s transverse position, beam size, and beam pipe aperture, is usually incorporated into longitudinal trackers on a per-turn basis by assuming particles are uniformly affected. Sampling from a 6D distribution in phase-space, a particle's transverse trajectories within a bunch will vary due to Betatron motion. A transverse tracker was developed to characterize the effective geometric factor of a given particle accounting for its transverse emittance, phase advance, and dispersion within a ring. A particle’s effective geometry factor is then estimated by interpolation without the need for transverse tracking. This variance in geometric factor due to transverse motion was incorporated into the longitudinal tracker BLonD, systematically affecting the synchrotron frequency distribution. The filamentation rate of a mismatched or perturbed longitudinal distribution was increased, which could suggest a stabilizing space-charge phenomenon.
+Particles in an intense bunch will experience longitudinal self-fields due to space-charge. This space charge effect, described by geometric factors dependent on a particle’s transverse position, beam size, and beam pipe aperture, is usually incorporated into longitudinal trackers on a per-turn basis by assuming particles are uniformly affected. Sampling from a 6D distribution in phase-space, a particle's transverse trajectories within a bunch will vary due to Betatron motion. A transverse tracker was developed to characterize the effective geometric factor of a given particle accounting for its transverse emittance, phase advance, and dispersion within a ring. A particle’s effective geometry factor is then estimated by interpolation without the need for transverse tracking. This variance in geometric factor due to transverse motion was incorporated into the longitudinal tracker \textit{BLonD}, systematically affecting the synchrotron frequency distribution. The filamentation rate of a mismatched or perturbed longitudinal distribution was increased, which could suggest a stabilizing space-charge phenomenon.
 \end{abstract}
 
-% \chapter*{Acknowledgements}
-% \thispagestyle{empty}
+\chapter*{Acknowledgements}
+\thispagestyle{empty}
 
-% I'd like to thank my supervisor Dr. Alexandre Lasheen for providing me this amazing opportunity to work at CERN and be extraordinarily accommodating to the varoius challenges I faced moving between continents and countries during such a dynamic period in time. He was also an exquisite mentor and an excellent resource of learning for my studies, and an excellent peer who I enjoyed working with.
-% I'd like to thank the professors and administrators at Paris-Saclay University including Professor Sophie, Kazamias, Professor Guy Bonnaud, and Claude Rabot, for providing me logistical support and guidance for this stage in my academic career.
+First, I'd like to thank my supervisor, Dr. Alexandre Lasheen, for providing me this amazing opportunity to work at CERN and for being extraordinarily accommodating throughout my technical studentship. Logistically, he helped me navigate moving between countries and continents during a particularly dynamic time in history. He was an exquisite mentor, learning resource, and peer with whom I'm thankful for having had the opportunity to work with. Additionally I'd like to thank others within the SY-RF-BR section at CERN for their insight during section meetings and other technical discussions.
+
+I'd like to thank the professors at Université Paris-Saclay, Jean-Marcel Rax, Guy Bonnaud and Sophie Kazamias, for encouraging me to pursue the M2 GI (Grands-Instruments), subsequently named M2 PLATO (Plasmas, Lasers, Accelerators and Tokamaks). This program was an amazing learning experience as well as an opportunity to explore the various scientific institutions located within France and Switzerland.
+
+I would also like to thank my previous employer, Jagadishwar Sirigiri, and others at Bridge12, for the immense knowledge and experience I accumulated  while working there for  almost 4 years as a Scientist. Both the hands-on and analytic experiences I developed there proved instrumental towards my success as a master's student.
+
+Lastly I'd like to thank my parents, Philip and Donna, and my sister Gabrielle.Their all encompassing support, intrigue, and encouragement with my endeavors as a young physicist/engineer has kept me motivated.
